--- a/.yamato/urp_terrain-osx-openglcore.yml
+++ b/.yamato/urp_terrain-osx-openglcore.yml
@@ -67,7 +67,7 @@ URP_Terrain_OSX_OpenGLCore_editmode_mono_Linear_trunk:
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-downloader-cli
       -  unity-downloader-cli -u {{editor_versions.trunk_latest_internal.OSX.revision}} -c editor -c il2cpp  --wait --published-only
-      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
+      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain
     artifacts:
         logs:
             paths:
@@ -142,7 +142,7 @@ URP_Terrain_OSX_OpenGLCore_editmode_mono_Linear_CUSTOM-REVISION:
       -  brew tap --force-auto-update unity/unity git@github.cds.internal.unity3d.com:unity/homebrew-unity.git
       -  brew install unity-downloader-cli
       -  unity-downloader-cli --source-file unity_revision.txt -c editor -c il2cpp  --wait --published-only
-      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain --zero-tests-are-ok=1
+      -  ./utr  --artifacts_path=TestProjects/UniversalGraphicsTest_Terrain/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=$TEST_FILTER --testproject=./TestProjects/UniversalGraphicsTest_Terrain
     artifacts:
         logs:
             paths:
