--- a/.yamato/urpupdate_boatattack-win-vulkan.yml
+++ b/.yamato/urpupdate_boatattack-win-vulkan.yml
@@ -67,7 +67,7 @@ URPUpdate_BoatAttack_Win_Vulkan_editmode_mono_Linear_trunk:
               set /p GIT_REVISIONDATE=<revdate.tmp
               echo %GIT_REVISIONDATE%
               del revdate.tmp
-              utr --artifacts_path=TestProjects/URP-Update-Testing/BoatAttack-19-4/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=%TEST_FILTER% --testproject=./TestProjects/URP-Update-Testing/BoatAttack-19-4 --zero-tests-are-ok=1
+              utr --artifacts_path=TestProjects/URP-Update-Testing/BoatAttack-19-4/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=%TEST_FILTER% --testproject=./TestProjects/URP-Update-Testing/BoatAttack-19-4
     artifacts:
         logs:
             paths:
@@ -138,7 +138,7 @@ URPUpdate_BoatAttack_Win_Vulkan_editmode_mono_Linear_CUSTOM-REVISION:
               set /p GIT_REVISIONDATE=<revdate.tmp
               echo %GIT_REVISIONDATE%
               del revdate.tmp
-              utr --artifacts_path=TestProjects/URP-Update-Testing/BoatAttack-19-4/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=%TEST_FILTER% --testproject=./TestProjects/URP-Update-Testing/BoatAttack-19-4 --zero-tests-are-ok=1
+              utr --artifacts_path=TestProjects/URP-Update-Testing/BoatAttack-19-4/test-results --editor-location=.Editor --extra-editor-arg="-colorspace=Linear" --extra-editor-arg="-force-vulkan" --extra-editor-arg="-playergraphicsapi=Vulkan" --platform=editmode --scripting-backend=Mono2x --suite=editor --testfilter=%TEST_FILTER% --testproject=./TestProjects/URP-Update-Testing/BoatAttack-19-4
     artifacts:
         logs:
             paths:
