--- a/.yamato/_editor_pinning.yml
+++ b/.yamato/_editor_pinning.yml
@@ -53,6 +53,7 @@ editor-pinning-update:
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
+      -  git config core.whitespace cr-at-eol
       -  pipenv run python3 .yamato/script/editor_scripts/update_revisions.py --target-branch 10.x.x/ci/editor-pinning
     dependencies:
       -  .yamato/_editor_pinning.yml#editor-pinning-target-to-ci
@@ -83,6 +84,7 @@ editor-pinning-merge-revisions-2020.3:
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
+      -  git config core.whitespace cr-at-eol
       -  pipenv run python3 .yamato/script/editor_scripts/merge_revisions.py --revision $GIT_REVISION --target-branch 10.x.x/release --track 2020.3
 editor-pinning-merge-revisions-2020.3-abv:
     name: Merge [2020.3] revisions to 10.x.x/release [ABV]
@@ -110,6 +112,7 @@ editor-pinning-merge-revisions-2020.3-abv:
                      fi
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
+      -  git config core.whitespace cr-at-eol
       -  pipenv run python3 .yamato/script/editor_scripts/merge_revisions.py --revision $GIT_REVISION --target-branch 10.x.x/release --track 2020.3
 editor-pinning-merge-all:
     name: Merge all [no CI][2020.3 no ABV]
